# abyssal-nexus-v2

./: Cargo.toml  Dockerfile  README.md
docs/: MATRIX_X.md
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx  types.ts
src/: lib.rs  llm_proxy.rs  main.rs  matrix.rs
terraform/: main.tf
